completed main functionality of app

--- a/src/sass/HeaderCartButton.scss
+++ b/src/sass/HeaderCartButton.scss
@@ -32,7 +32,7 @@
   
 
   
-  .badge {
+  .Badge {
     background-color: #b94517;
     padding: 0.25rem 1rem;
     border-radius: 25px;
@@ -40,7 +40,7 @@
     font-weight: bold;
   }
   
-  .bump {
+  .Bump {
     animation: bump 300ms ease-out;
   }
   
