--- a/src/sass/Cart.scss
+++ b/src/sass/Cart.scss
@@ -18,13 +18,13 @@
   
 .Actions {
     text-align: right;
-    button {
+    .Button-close, .Button-order {
         font: inherit;
         cursor: pointer;
         background-color: transparent;
         border: 1px solid #8a2b06;
         padding: 0.5rem 2rem;
-        border-radius: 25px;
+        border-radius: 100px;
         margin-left: 1rem;
         :hover, :active {
             background-color: #5a1a01;
