--- a/src/sass/Input.scss
+++ b/src/sass/Input.scss
@@ -6,7 +6,7 @@
         font-weight: bold;
         margin-right: 1rem;
     }
-    .ant-input {
+    .input {
         width: 3rem;
         border-radius: 5px;
         border: 1px solid #ccc;
